--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             </a>
           </li>
           <li class="header__nav-item header__nav-item--services">
-            <button class="header__nav-element header__nav-element--button">
+            <button
+              class="header__nav-element header__nav-element--button header__nav-element--services"
+            >
               Услуги
               <svg width="12" height="12" class="header__nav-icon">
                 <use href="./sprite.svg#arrow"></use>
