Исправляет картинку в меню

--- a/index.html
+++ b/index.html
@@ -47,7 +47,13 @@
                   <a href="#" class="header__nav-dropdown-link">Аудит</a>
                 </li>
               </ul>
-              <img src="./public/img/figure-1.webp" width="100px" height="100px" alt="" />
+              <img
+                class="header__nav-dropdown-image"
+                src="./public/img/figure-1.webp"
+                width="100px"
+                height="100px"
+                alt=""
+              />
             </div>
           </li>
           <li class="header__nav-item">
